Subject line (my config test ) Detailed description of commit. [now iam able to verify cinfig text]

--- a/barex.css
+++ b/barex.css
@@ -194,4 +194,4 @@ nav ul li:hover {
   scroll-margin: 120px;
 }
 /* this is comment*/
-/* this comment is for configuration*/
+/* this comment is for configuration task */
